# ChangeLog for app-shells/zsh
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/zsh/ChangeLog,v 1.148 2010/05/02 18:41:39 tove Exp $

*zsh-4.3.10-r1 (02 May 2010)

  02 May 2010; Torsten Veller <tove@gentoo.org> +zsh-4.3.10-r1.ebuild:
  EAPI=2. Depend on libpcre with USE=static-libs for a static build.
  Maintenance

  24 Jan 2010; Tom Gall <tgall@gentoo.org< zsh-4.3.10.ebuild:
  stlabe on ppc64 (passes tests .9 did not)

  29 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org> zsh-4.3.10.ebuild:
  Allow using heirloom-doctools instead of groff.

*zsh-4.3.10 (03 Jun 2009)

  03 Jun 2009; Torsten Veller <tove@gentoo.org> +zsh-4.3.10.ebuild:
  Version bump

  07 May 2009; Torsten Veller <tove@gentoo.org> zsh-4.3.9.ebuild:
  Don't build gdbm module if USE=-gdbm for a non-dynamic zsh (#268926)

  22 Mar 2009; Raúl Porcel <armin76@gentoo.org> zsh-4.3.9.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #261488

  22 Mar 2009; Markus Meier <maekke@gentoo.org> zsh-4.3.9.ebuild:
  x86 stable, bug #261488

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> zsh-4.3.9.ebuild:
  Stable for HPPA (bug #261488).

  19 Mar 2009; Brent Baude <ranger@gentoo.org> zsh-4.3.9.ebuild:
  stable ppc, bug 261488

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> zsh-4.3.9.ebuild:
  Stable on alpha, bug #261488

  15 Mar 2009; Dawid Węgliński <cla@gentoo.org> zsh-4.3.9.ebuild:
  Stable on amd64 (bug #261488)

  13 Mar 2009; Torsten Veller <tove@gentoo.org> zsh-4.3.9.ebuild:
  Let tests die

  21 Jan 2009; Torsten Veller <tove@gentoo.org>
  +files/zsh-4.3.4-mkmakemod.patch, zsh-4.3.4-r1.ebuild:
  Fix for latest autoconf (#254348)

*zsh-4.3.9 (04 Jan 2009)

  04 Jan 2009; Torsten Veller <tove@gentoo.org>
  +files/prompt_gentoo_setup-1, +zsh-4.3.9.ebuild:
  Version bump (#246544)

  29 Jun 2008; Torsten Veller <tove@gentoo.org> zsh-4.3.4-r1.ebuild:
  Add missing die: || "..." -> || die "..."
