@@ -4,6 +4,7 @@ Hash: SHA1
 AUX prompt_gentoo_setup 1222 RMD160 883f6a906300a4d8300145f722769db57c90ece2 SHA1 1441a7533c4197e1ddd467dc102a35be4659ff9c SHA256 59689d972abbe60dcfa567193060ec11d076a60accadf1015fa9ae59ad864667
 AUX prompt_gentoo_setup-1 745 RMD160 7235736c59ee02ea2c6cdc3c31f2af788d3ed34d SHA1 f740b6c37c55affabe3a66f1ceb45b2a1484f28f SHA256 c04da5152712fcd2eb2b83a1967f892f31cc087e1245b28e4806ab5099ac16e7
 AUX zprofile 1343 RMD160 44038b7db235cbcc548ab6742c435f1c36868703 SHA1 8696a4afcb3116073da727bef10a826bf9f145e8 SHA256 f4a7067d695605520e18d41f619f6dfab4fcf2c71ad366930241266eb18900a6
+AUX zprofile-1 1767 RMD160 a4fa4c3dea9cdf6d6a875ab494552c7464fb3e83 SHA1 fb409dd1e2000b1eeb386f8dec2b0dbe09035d9f SHA256 947d4dc9357dac9a1a16ebc7404e686d1a3b31fb1dfed9c3e3eb806d93ccfff8
 AUX zsh-4.3.4-configure-changequote.patch 694 RMD160 9f56120b2f8cc7ca913518ed099167fba3bc0b7f SHA1 986a8b03bc49da157ced270321538a579a9b6ec0 SHA256 78047e66ce905a701464616d3e3cc2a3a9714ac88ad063b6330234c5ea61e9e6
 AUX zsh-4.3.4-mkmakemod.patch 489 RMD160 156f0e94594198d83861414d4f0618f9fccf99aa SHA1 528994f7bc6dcb6b5b85b46997d97472d7166bd5 SHA256 094540885617e97afd947fede7935b0d9c18e375ddd471b729f752c11a4d32d9
 AUX zsh-init.d-gentoo.diff 1389 RMD160 1c317d93058b05e1d89dd81b4ab746ef31b4c38a SHA1 eb91fb330c0df1e227ee541159c7ac2d2fe15e53 SHA256 a8dcd168ab909a2b80b2958e3fc3cc974bc6048c08499be16c7925c1723b212f
@@ -19,18 +20,20 @@ DIST zsh-4.3.6.tar.bz2 2527972 RMD160 fedd72f427439e75b8488479a3d20e9d8d5be794 S
 DIST zsh-4.3.9-doc.tar.bz2 2570995 RMD160 c7080f41901bd4b6d0b8e9f9385fd57a9d73a383 SHA1 456a696de365066b32161d194de9c7643dbeb7a0 SHA256 15ae762a228c2b2d410cecdddca279e49dfa6cfff85aaf8fa55e74940b4e8165
 DIST zsh-4.3.9.tar.bz2 2659602 RMD160 2c88347fa357e3624f000721963749c6ccb4e129 SHA1 7c80e1ad6b311ee5877172a1a7e0161a9a60da70 SHA256 8fdd6d6c6dc3a061b0c9a1b26eb367d10c0d8094d4b8bd2613740fc40b4382ab
 DIST zsh-lovers_0.5.orig.tar.gz 499014 RMD160 505261d9e28554c838864421ec81b6665e55dfa1 SHA1 bc9b41dd5814f60b39d393ef68c4dc099da9016b SHA256 d945adab65fdf3ff322ed64c54739b2a1cec964544c5f438005ddad9c0c62bea
+DIST zsh-lovers_0.8.3.tar.gz 875976 RMD160 f8482d61d700cc79530b4839de5a86aed6783e99 SHA1 f4905d8825c982371e72053a58cb9679329249a8 SHA256 c786724ac9526e2504142c6d607bc6f3703a35b3db804123f0ffe4214b399ea9
 EBUILD zsh-4.3.10-r1.ebuild 5086 RMD160 a1f4472197f8f6d13f4363cec4f14cab031b7208 SHA1 d427338985d35efca9ca2bb170da390ea3eebbc1 SHA256 8feaa1b118d76c37e98916e2ad059bf664ee508fe06d3c1f1d2680303cb6c662
+EBUILD zsh-4.3.10-r2.ebuild 5913 RMD160 e1f049e0db8fdd0e7500354432c86d8af83db7b8 SHA1 96356d205d5232fb5315d9c2eff0515de944229e SHA256 1640942a29fa0dde406284034da87b3f84ec62817b4248b0b8238245169d012a
 EBUILD zsh-4.3.10.ebuild 5124 RMD160 a4143f9142d1f16a48f88c15931e99d7965fc4c3 SHA1 5d95030e05ed8a8fe61bc6d13aba290a748dee39 SHA256 45e3ec13bd86e2be2d1eca2919ebfdfe65ccae42d4713c0fd1f54f5f8ab57660
 EBUILD zsh-4.3.4-r1.ebuild 4937 RMD160 eae72421392ddec85165875da2ae86ce9f47dc4d SHA1 93e289f637ace754e11b63a1c7d584a6014a7338 SHA256 86489b1dd6aefe9e84379f1e4f9b378cd2e4e8114c60a0cfbad66e93ab4d56e8
 EBUILD zsh-4.3.5.ebuild 3967 RMD160 80ff8f3d833bf79f92b574f984f46e1b0b911a05 SHA1 144f8ebd1a4f844aa3a5e807501f9f589181e10f SHA256 ba0cb5a089909a0178dbae67cf5975a822e1c0f039b2dc532f6787f2324b26a9
 EBUILD zsh-4.3.6.ebuild 4597 RMD160 60ec0dfa7339d56ab52da03c950acd6f4046a72d SHA1 b3662be5429293fb0af800de54e561ad0e83f334 SHA256 27c233d2f6e10fbfb45429b012e90ab3b3da2ea7811269c1e46a5117f335b2b8
 EBUILD zsh-4.3.9.ebuild 5080 RMD160 f13d87b246091cd154bd742fbb39e71b6862d698 SHA1 a0d105c1631eda3b2a6aa6cd77a4e244b4ca70d8 SHA256 ade1ddb234629a9b72e0719c354dc7f44ab4c5e18219f9aa75a8efa99cf18424
-MISC ChangeLog 22213 RMD160 c5629a5f9ea1932bb9e9092ed7265bd8f0e336f7 SHA1 76a441a85612bd0fa3ed8f221911d1ccf10c8803 SHA256 9df54fa072832f9bf7ff5c8f623ddf24567c8b64c14172995be77e1c98637e46
+MISC ChangeLog 22491 RMD160 49822e2c948b4368ee56a34b68a2e46339609f43 SHA1 29fb009a69b60c93141f9ed34f2c16bad0adbc95 SHA256 6211973aa2debc053515f9efe2559f48ced51346b33d68676402ad3fb8a92304
 MISC metadata.xml 553 RMD160 b4d3d1ca445d0c50f0372fb8af1e9fa2e4c303fb SHA1 8652a4d38b0858eff280576ca143ddc9b5db83c1 SHA256 e4bdebdc75f06d8cc998456bd2a1ec7300b6a08ca5fb28590841ad7071366cf4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkvdzN8ACgkQV3J2n04Eaux41wCeLPpiQVoQxT0XaoQRfOzjxvmm
-ZyYAn2IGcOBcVI7jLgaOGvD7hgnFARpO
-=dW34
+iEYEARECAAYFAkxn2/EACgkQV3J2n04EauyU+gCaAm5rkx030aEWZE4TT4FDkPf/
+bSsAnjUBS9lfeTZ7OOOez3CN6Cso+lMJ
+=/Oif
 -----END PGP SIGNATURE-----
